Added prettier support and go-template plugin

--- a/projektwohnung-site/layouts/_default/baseof.html
+++ b/projektwohnung-site/layouts/_default/baseof.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
+<html lang="{{- .Site.Language.Lang -}}">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="description" content="Serviced Apartments und Projektwohnungen in Bern und Frankfurt">
-<meta name="keywords" content="Serviced Apartments Möbliert möblierte Projekt wohnungen Bern Frankfurt Wohnen auf Zeit">
-<meta name="author" content="Projektwohnungen Petersen Barbara und Jens-Ole Petersen">
+
+    {{ if .IsHome }}
+    <!-- Homepage -->
+    <title>{{ .Site.Params.description }} - {{ .Site.Params.mydomain }}</title>
+             {{ if .Site.Params.description }}
+    <meta name="description" content="{{ .Site.Params.description }}" />
+    {{end}} {{ else }}
+    <!-- Any other Page -->
+    <title>{{ .Title }} - {{ .Site.Params.mydomain }}</title>
+    {{if .Description }}
+    <meta name="description" content="{{ .Description }}" />
+    {{ end }} {{ end }}
+
+    <meta
+      name="description"
+      content="Serviced Apartments und Projektwohnungen in Bern und Frankfurt"
+    />
+    <meta
+      name="keywords"
+      content="Serviced Apartments Möbliert möblierte Projekt wohnungen Bern Frankfurt Wohnen auf Zeit"
+    />
+    <meta
+      name="author"
+      content="Projektwohnungen Barbara Petersen und Jens-Ole Petersen"
+    />
 
     <title>
       {{ or .Title .Site.Title }}{{ if ne .Kind "home" }} | {{
@@ -28,14 +51,11 @@
       type="text/css"
       rel="stylesheet"
     /> -->
-  
   </head>
 
   <body>
-    {{ partial "header" . }} 
-     {{ block "page" . }}
-     {{ end }} 
-    {{ partial "footer" . }}
+    {{ partial "header" . }} {{ block "page" . }} {{ end }} {{ partial "footer"
+    . }}
 
     <!--  Scripts -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
