--- a/projektwohnung-site/layouts/partials/header.html
+++ b/projektwohnung-site/layouts/partials/header.html
@@ -1,13 +1,13 @@
 <header>
   <div class="container">
     <div id="branding">
-      <h1>Projektwohnungen</h1>
+      <h1><span class="highlight">Projekt</span>wohnungen</h1>
     </div>
     <nav>
       <ul>
-        <li><a href="/">Home</a></li>
+        <li class="current"><a href="/">Home</a></li>
         <li><a href="/apartments/">Apartments</a></li>
-        <li><a href="/booking/">Preis & Verfügbarkeit</a></li>
+        <li><a href="/terms/">Preis & Verfügbarkeit</a></li>
         <li><a href="/contact/">Kontakt</a></li>
       </ul>
     </nav>
