--- a/projektwohnung-site/static/css/style.css
+++ b/projektwohnung-site/static/css/style.css
@@ -155,3 +155,39 @@ footer {
   background-color: lightgray;
   text-align: center;
 }
+
+/* Media Queries */
+
+@media (max-width: 768px) {
+  header #branding,
+  header nav,
+  header nav li,
+  #newsletter h1,
+  #newsletter form,
+  #boxes .box,
+  aside#sidebar,
+  .boxes {
+    float: none;
+    text-align: center;
+    width: 100%;
+  }
+
+  header {
+    padding-bottom: 20px;
+  }
+
+  #intro h1 {
+    margin-top: 20px;
+  }
+
+  #newsletter button {
+    display: block;
+    width: 100%;
+  }
+
+  #newsletter form input[type="email"] {
+    width: 100%;
+    margin-bottom: 6px;
+  }
+}
+}
