--- a/projektwohnung-site/layouts/partials/header.html
+++ b/projektwohnung-site/layouts/partials/header.html
@@ -5,10 +5,27 @@
     </div>
     <nav>
       <ul>
-        <li class="current"><a href="/">Home</a></li>
+        {{ $currentPage := . }}
+        {{ range .Site.Menus.main }}
+          {{ $menu_item_url := .URL | relLangURL }}
+          {{ $page_url := $currentPage.RelPermalink | relLangURL }}
+          <li {{ if eq $menu_item_url $page_url }}class="current"{{ end }}>
+            <a href="{{ $menu_item_url | absLangURL }}">{{ .Name }}</a>
+          </li>
+        {{ end }}
+        <!-- <li class="current"><a href="/">Home</a></li>
         <li><a href="/apartments/">Apartments</a></li>
         <li><a href="/terms/">Preis & Verfügbarkeit</a></li>
-        <li><a href="/contact/">Kontakt</a></li>
+        <li><a href="/contact/">Kontakt</a></li> -->
+        {{ if .IsTranslated }}
+          {{ range .Translations }}
+            {{ if eq .Site.Language.Lang "de" }}
+              <li><a href="{{ .RelPermalink }}">de</a> | en</li>
+            {{ else }}
+              <li>de | <a href="{{ .RelPermalink }}">en</a></li>
+            {{ end }}
+          {{ end }}
+        {{ end }}
       </ul>
     </nav>
   </div>
