--- a/projektwohnung-site/assets/scss/_style.scss
+++ b/projektwohnung-site/assets/scss/_style.scss
@@ -1,7 +1,7 @@
 $prim: #b2ad7f;
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-size: 1em;
   line-height: 1.5;
   padding: 0;
@@ -20,6 +20,138 @@ ul {
   padding: 0;
 }
 
+.uebertitel {
+  margin: 0px 0px 5px 0px;
+  font-size: 1.4em;
+  /*background-color: lightcoral;*/
+}
+
+.apartmenttitel {
+  margin: 0px;
+  font-size: 1.8em;
+  font-weight: bold;
+  /*background-color: lightgreen;*/
+}
+
+.untertitel {
+  margin-top: 10px;
+  font-size: 1em;
+  /*background-color: lightblue;*/
+}
+
+.zwischentitel {
+  margin: 0px 0px 5px 0px;
+  font-size: 1.4em;
+  font-weight: bold;
+  /*background-color: lightcoral;*/
+}
+
+hr {
+  border-top: 1px solid grey;
+}
+
+.contentbox {
+  border: 1px solid grey;
+  padding: 5px;
+  padding-left: 10px;
+  margin: 20px;
+  border-radius: 5px;
+}
+
+.image-grundriss img {
+  object-fit: contain;
+  width: 10%;
+}
+
+/* Modal */
+/* Style the Image Used to Trigger the Modal */
+// #myImg {
+//   border-radius: 5px;
+//   cursor: pointer;
+//   transition: 0.3s;
+// }
+
+// #myImg:hover {
+//   opacity: 0.7;
+// }
+
+// /* The Modal (background) */
+// .modal {
+//   display: none; /* Hidden by default */
+//   position: fixed; /* Stay in place */
+//   z-index: 1; /* Sit on top */
+//   padding-top: 100px; /* Location of the box */
+//   left: 0;
+//   top: 0;
+//   width: 100%; /* Full width */
+//   height: 100%; /* Full height */
+//   overflow: auto; /* Enable scroll if needed */
+//   background-color: rgb(0, 0, 0); /* Fallback color */
+//   background-color: rgba(0, 0, 0, 0.9); /* Black w/ opacity */
+// }
+
+// /* Modal Content (Image) */
+// .modal-content {
+//   margin: auto;
+//   display: block;
+//   width: 80%;
+//   max-width: 700px;
+// }
+
+/* Caption of Modal Image (Image Text) - Same Width as the Image */
+// #caption {
+//   margin: auto;
+//   display: block;
+//   width: 80%;
+//   max-width: 700px;
+//   text-align: center;
+//   color: #ccc;
+//   padding: 10px 0;
+//   height: 150px;
+// }
+
+/* Add Animation - Zoom in the Modal */
+// .modal-content,
+// #caption {
+//   animation-name: zoom;
+//   animation-duration: 0.6s;
+// }
+
+// @keyframes zoom {
+//   from {
+//     transform: scale(0);
+//   }
+//   to {
+//     transform: scale(1);
+//   }
+// }
+
+// /* The Close Button */
+// .close {
+//   position: absolute;
+//   top: 15px;
+//   right: 35px;
+//   color: #f1f1f1;
+//   font-size: 40px;
+//   font-weight: bold;
+//   transition: 0.3s;
+// }
+
+// .close:hover,
+// .close:focus {
+//   color: #bbb;
+//   text-decoration: none;
+//   cursor: pointer;
+// }
+
+/* 100% Image Width on Smaller Screens */
+// @media only screen and (max-width: 700px) {
+//   .modal-content {
+//     width: 100%;
+//   }
+// }
+/* end Modal */
+
 .button_1 {
   height: 38px;
   background: red;
@@ -29,15 +161,62 @@ ul {
   color: white;
 }
 
-/* img css grid */
+/*.servicesitems-container */
+
+.material-symbols-outlined {
+  font-size: 3em;
+  font-variation-settings:
+    'FILL' 0,
+    'wght' 200,
+    'GRAD' 0,
+    'opsz' 24;
+}
+
+.servicesgrid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.servicesitems-container {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 7fr;
+  /*background-color: lightcyan;*/
+}
+
+.servicesitems-container .description {
+  display: flex;
+  flex-direction: column;
+  padding: 8px;
+  /*background-color: red;*/
+}
+
+.servicesitems-container .header {
+  text-decoration: underline;
+  /*background-color: lightgreen;*/
+}
+
+.servicesitems-container .content p {
+  margin: 0;
+  /*background-color: lightpink; */
+}
+
+.descriptiongrid-container {
+  margin-top: 30px;
+  position: relative;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  /*background-color: yellow;*/
+}
 
 .imagegrid-container {
   margin-top: 30px;
   position: relative;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: 30%;
+  grid-auto-rows: 32%;
   grid-gap: 8px;
+  /*background-color: yellow;*/
 }
 
 .imagegrid-item img {
@@ -118,11 +297,14 @@ ul {
 
 /* hover */
 .image-gallery li:hover .overlay {
-  transform: scale(1);
+  transform: scale(1.4);
 }
 
 /* Header */
 header {
+  position: sticky;
+  top: 0;
+  z-index: 999;
   background: white;
   color: black;
   padding-top: 30px;
