--- a/projektwohnung-site/layouts/_default/baseof.html
+++ b/projektwohnung-site/layouts/_default/baseof.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="{{- .Site.Language.Lang -}}">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     {{ if .IsHome }}
@@ -27,6 +27,19 @@
       name="author"
       content="Projektwohnungen Barbara Petersen und Jens-Ole Petersen"
     />
+
+    <!-- loads the Google Roboto Font -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto"
+    />
+    <!-- loads the entire Icon Variable Font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+      rel="stylesheet"
+    />
+
+    <!-- <script src="/js/modals.js"></script> -->
 
     <!-- old local css  -->
     <!-- <link href="/css/style.css" type="text/css" rel="stylesheet" /> -->
@@ -60,6 +73,7 @@
     /> -->
   </head>
 
+  <!-- <body onload="showAlert()"> -->
   <body>
     {{ partial "header" . }}
     {{ partial "topnav" . }}
@@ -74,5 +88,7 @@
 
     <!-- <script type="text/javascript" src="/js/lightbox.js"></script>
     <link rel="stylesheet" href="/css/lightbox.css" /> -->
+
+    <script src="/js/lightbox2/lightbox-plus-jquery.min.js"></script>
   </body>
 </html>
