--- a/projektwohnung-site/assets/scss/_style.scss
+++ b/projektwohnung-site/assets/scss/_style.scss
@@ -482,3 +482,8 @@ footer {
     margin-bottom: 6px;
   }
 }
+
+#mapx {
+  height: 400px; /* The height is 400 pixels */
+  width: 100%; /* The width is the width of the web page */
+}
