--- a/projektwohnung-site/layouts/apartments/single.html
+++ b/projektwohnung-site/layouts/apartments/single.html
@@ -92,6 +92,7 @@
       <!-- *** Address Section *** -->
       <div class="contentbox">
         <p class="zwischentitel">{{ T "titleLocation" }}</p>
+        <div id="mapx"></div>
         <p>Adresse</p>
         <a href="https://maps.app.goo.gl/yiNCr37fh5UPebut7" target="_blank">
           Eschersheimer Landstrasse 48 <br />
@@ -107,4 +108,44 @@
       </div>
     </div>
   </div>
+
+  <!-- Bootstrap-Ladeprogramm für Google Maps API -->
+  <script>
+    ((g) => {
+      var h,
+        a,
+        k,
+        p = "The Google Maps JavaScript API",
+        c = "google",
+        l = "importLibrary",
+        q = "__ib__",
+        m = document,
+        b = window;
+      b = b[c] || (b[c] = {});
+      var d = b.maps || (b.maps = {}),
+        r = new Set(),
+        e = new URLSearchParams(),
+        u = () =>
+          h ||
+          (h = new Promise(async (f, n) => {
+            await (a = m.createElement("script"));
+            e.set("libraries", [...r] + "");
+            for (k in g)
+              e.set(
+                k.replace(/[A-Z]/g, (t) => "_" + t[0].toLowerCase()),
+                g[k],
+              );
+            e.set("callback", c + ".maps." + q);
+            a.src = `https://maps.${c}apis.com/maps/api/js?` + e;
+            d[q] = f;
+            a.onerror = () => (h = n(Error(p + " could not load.")));
+            a.nonce = m.querySelector("script[nonce]")?.nonce || "";
+            m.head.append(a);
+          }));
+      d[l]
+        ? console.warn(p + " only loads once. Ignoring:", g)
+        : (d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)));
+    })({ key: "AIzaSyDvmUa17dTdGBiSjKHn9ZkbGgzlWjsPdRY", v: "weekly" });
+  </script>
+  <script src="/js/googlemaps.js"></script>
 {{ end }}
