--- a/projektwohnung-site/layouts/_default/baseof.html
+++ b/projektwohnung-site/layouts/_default/baseof.html
@@ -70,6 +70,7 @@
 
 
     <!--  Scripts -->
+    <!-- LightBox2 -->
     <script src="/js/lightbox2/lightbox-plus-jquery.min.js"></script>
   </body>
 </html>
