--- a/projektwohnung-site/assets/scss/_style.scss
+++ b/projektwohnung-site/assets/scss/_style.scss
@@ -531,3 +531,21 @@ footer {
     margin-top: 0px;
   }
 }
+
+.cardGrid-container {
+  display: flex;
+}
+
+.cardGrid-card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  width: 28%;
+}
+/* On mouse-over, add a deeper shadow */
+.cardGrid-card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.cardGrid-text {
+  padding: 2px 16px;
+}
