--- a/projektwohnung-site/layouts/apartments/single.html
+++ b/projektwohnung-site/layouts/apartments/single.html
@@ -116,7 +116,7 @@
       <!-- *** Services Section *** -->
       <p class="zwischentitel">{{ T "titleServices" }}</p>
       <div class="servicesgrid-container">
-        {{ range.Page.Resources.Match "services/*.md" }}
+        {{ range .Page.Resources.Match "services/*.md" }}
           <div class="servicesitems-container">
             <span class="material-symbols-outlined"
               >{{ .Params.materialicon }}</span
@@ -153,7 +153,7 @@
           </p>
         {{ end }}
       </div>
-      <a href="/"> <button class="contact_button">Contact us</button></a>
+      {{ partial "contactUsButton" . }}
     </div>
     <p>
       <a href="/{{ .Language.Lang }}/apartments"
