--- a/projektwohnung-site/assets/scss/_style.scss
+++ b/projektwohnung-site/assets/scss/_style.scss
@@ -63,6 +63,10 @@ hr {
   width: 10%;
 }
 
+header {
+  background-color: white;
+}
+
 /* Apartment List Page */
 .apartmentlist-container {
   display: flex;
@@ -194,7 +198,7 @@ hr {
   border: 0;
   padding-left: 20px;
   padding-right: 20px;
-  color: white;
+  color: L;
 }
 
 /*.servicesitems-container */
@@ -278,7 +282,7 @@ hr {
   align-items: center;
   text-align: center;
   z-index: 100;
-  color: white;
+  color: L;
   background: rgba(57, 57, 57, 0.502);
   font-size: 24px;
   font-weight: bold;
@@ -341,7 +345,7 @@ header {
   position: sticky;
   top: 0;
   z-index: 999;
-  background: white;
+  background: L;
   color: black;
   padding-top: 30px;
   min-height: 70px;
@@ -388,7 +392,7 @@ header a:hover {
 .dark {
   padding: 15px;
   background: darkgray;
-  color: white;
+  color: L;
   margin-top: 10px;
   margin-bottom: 10px;
 }
@@ -485,7 +489,7 @@ footer {
 
 .contact_button {
   border: none;
-  color: white;
+  color: L;
   background-color: #04aa6d;
   padding: 15px 32px;
   text-align: center;
@@ -534,12 +538,15 @@ footer {
 
 .cardGrid-container {
   display: flex;
+  justify-content: center;
 }
 
 .cardGrid-card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
-  width: 28%;
+  width: 31%;
+  margin: 1%;
+  background-color: white;
 }
 /* On mouse-over, add a deeper shadow */
 .cardGrid-card:hover {
